package agentcrafter.llmqlearning

import sttp.client4.httpclient.HttpClientSyncBackend
import scala.concurrent.duration.Duration
import play.api.libs.json._
import scala.util.{Failure, Try, Using}
import scala.io.Source
import java.io.File
import sttp.client4.{Response, quickRequest}
import sttp.model.Uri
import io.github.cdimascio.dotenv.Dotenv

val dotenv: Dotenv =
  Dotenv.configure()
    .ignoreIfMissing()
    .load()

/**
 * Pure‑Scala LLM API client based on **sttp‑client v4** (quick layer).
 *
 * * No external JSON lib – minimal `escapeJson` helper only.
 * * Safer URI construction that always preserves host/port and endpoint path.
 * * Clearer error messages when the connection fails (e.g. server down).
 */
class LLMApiClient(
                    baseUrl: String = "https://api.openai.com",
                    apiKey: String = dotenv.get("OPENAI_API_KEY", "API")
                  ):
  /**
   * Trigger an LLM generation.
   *
   * @param prompt   Extra text to prepend
   * @param model    Model name (default: "gpt-4o")
   * @param stream   Whether to request streaming output
   * @param endpoint API path (default: "/v1/chat/completions")
   * @param simulationFilePath Optional path to the file containing simulation DSL content
   */
  def callLLM(
               prompt: String = "",
               model: String = "gpt-4o",
               stream: Boolean = false,
               endpoint: String = "/v1/chat/completions",
               simulationFilePath: Option[String] = None
             ): Try[String] =
    for
      simContent <- readSimulationContent(simulationFilePath)
      response   <- postRequest(prompt, model, stream, endpoint, simContent)
    yield response


  /**
   * Constructs a full URI by combining the base URL with the endpoint path.
   *
   * @param endpoint The API endpoint path
   * @return Complete URI for the API call
   * @throws IllegalArgumentException if the resulting URI is invalid
   */
  private def fullUri(endpoint: String): Uri =
    val cleanBase   = baseUrl.stripSuffix("/")
    val cleanPath   = endpoint.stripPrefix("/")
    Uri.parse(s"$cleanBase/$cleanPath").getOrElse(throw new IllegalArgumentException(s"Invalid URI: $cleanBase/$cleanPath"))

  /**
   * Performs the actual HTTP POST request to the LLM API.
   *
   * @param prompt The user prompt
   * @param model The LLM model to use
   * @param stream Whether to enable streaming
   * @param endpoint The API endpoint
   * @param simContent The simulation DSL content to include
   * @return Try containing the LLM response or an error
   */
  private def postRequest(
                           prompt: String,
                           model: String,
                           stream: Boolean,
                           endpoint: String,
                           simContent: String
                         ): Try[String] =
    val enhancedPrompt =
      s"""$prompt
         |
         |Simulation DSL content:
         |$simContent""".stripMargin

    val body: String =
      s"""{
         |  "model": ${jsonString(model)},
         |  "messages": [
         |    {
         |      "role": "user",
         |      "content": ${jsonString(enhancedPrompt)}
         |    }
         |  ],
         |  "stream": $stream
         |}""".stripMargin
    print(body)

    Try {
      val uri = fullUri(endpoint)
      val resp: Response[String] = quickRequest
        .post(uri)
        .contentType("application/json")
        .header("Authorization", s"Bearer $apiKey")
        .body(body)
        .readTimeout(Duration.Inf) // wait indefinitely for response
        .send(HttpClientSyncBackend())

      if resp.code.isSuccess then
        // Parse OpenAI response format
        val parsed = Json.parse(resp.body)
        (parsed \ "choices" \ 0 \ "message" \ "content").asOpt[String]
          .getOrElse(throw new RuntimeException(s"Could not parse response content from: ${resp.body}"))
      else throw new RuntimeException(s"API call failed: HTTP ${resp.code} – ${resp.statusText} (URI: $uri)")
    }.recoverWith {
      case ex: Throwable =>
        Failure(new RuntimeException(s"Error calling OpenAI API at ${fullUri(endpoint)} – ${ex.getMessage}", ex))
    }

  /**
   * Escapes control characters so the string can be safely embedded in JSON.
   *
   * @param s The string to escape
   * @return JSON-safe escaped string
   */
  private def escapeJson(s: String): String =
    s.replace("\\", "\\\\")
      .replace("\"", "\\\"")
      .replace("\b", "\\b")
      .replace("\f", "\\f")
      .replace("\n", "\\n")
      .replace("\r", "\\r")
      .replace("\t", "\\t")

  /**
   * Wraps a string in JSON quotes with proper escaping.
   *
   * @param s The string to wrap
   * @return JSON-formatted string with quotes
   */
  private def jsonString(s: String): String = "\"" + escapeJson(s) + "\""

  /**
   * Reads simulation content from the specified file path.
   *
   * @param simulationFilePath Optional path to the file containing simulation DSL content
   * @return Try containing the simulation content or an error message
   */
  private def readSimulationContent(simulationFilePath: Option[String]): Try[String] =
    Try {
      simulationFilePath match
        case Some(filePath) =>
          val file = File(filePath)
          if !file.exists then
            throw new RuntimeException(s"Simulation file not found: $filePath")

          Using(Source.fromFile(file)) { src =>
            val content = src.mkString
            content.indexOf("simulation:") match
              case -1  => throw new RuntimeException(s"File $filePath does not contain a simulation block")
              case idx => 
                val simulationContent = content.substring(idx)
                // Remove wallsFromLLM blocks to prevent prompt duplication
                filterOutWallsFromLLM(simulationContent)
          }.get

        case None =>
          "simulation:\n  // No simulation file specified"
    }.recover {
      case ex => throw new RuntimeException(s"Error reading simulation file: ${ex.getMessage}")
    }

  /**
   * Filters out wallsFromLLM blocks from simulation content to prevent prompt duplication.
   *
   * @param content The simulation DSL content
   * @return Content with wallsFromLLM blocks removed
   */
  private def filterOutWallsFromLLM(content: String): String =
    val lines = content.split("\n")
    val result = scala.collection.mutable.ArrayBuffer[String]()
    var insideWallsFromLLM = false
    var indentLevel = 0
    var wallsFromLLMIndent = 0
    
    for (line <- lines) {
      val trimmed = line.trim
      val currentIndent = line.takeWhile(_.isWhitespace).length
      
      if (trimmed.startsWith("wallsFromLLM:")) {
        insideWallsFromLLM = true
        wallsFromLLMIndent = currentIndent
        // Add a comment indicating walls are generated by LLM
        result += (" " * currentIndent) + "// Walls generated by LLM"
      } else if (insideWallsFromLLM) {
        // Exit wallsFromLLM block when we reach a line with same or less indentation
        if (trimmed.nonEmpty && currentIndent <= wallsFromLLMIndent) {
          insideWallsFromLLM = false
          result += line
        }
        // Skip lines inside wallsFromLLM block
      } else {
        result += line
      }
    }
    
    result.mkString("\n")
